src/objects/SBQQ__Subscription__c.object
<CustomObject>
    <customHelpPage>SBQQ__SubscriptionHelp</customHelpPage>
    <description>Subscription to a product or service currently or previously owned by a customer.</description>
    <fields>
        <fullName>Absolute_Concession_Value__c</fullName>
        <formula>(Headline_Product__r.Total_Annualised_Rent__c / 12) * Stepped_Increase_Amount__c * Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Absolute Concession Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ad_hoc_Revenue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad-hoc Revenue</label>
        <referenceTo>Ad_hoc_Revenue__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BC_Billing_Type__c</fullName>
        <formula>IF(OR(TEXT(SBQQ__BillingFrequency__c) == &apos;One-Time&apos;, TEXT(SBQQ__BillingFrequency__c) == &apos;Up Front&apos;, TEXT(SBQQ__BillingFrequency__c) == &apos;Partial Up Front&apos;), &apos;One-off&apos; , &apos;Recurring Fixed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FF BC Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backdated_Amount__c</fullName>
        <label>Backdated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backdated_Start_Date__c</fullName>
        <label>Backdated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BreakDate__c</fullName>
        <description>Only for Break products, this calculates based off the startdate and breakdate on the quote</description>
        <inlineHelpText>Only for Break products, this calculates based off the startdate and breakdate on the quote</inlineHelpText>
        <label>Break Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Break_Actioned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Break Actioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Break_Date__c</fullName>
        <formula>IF(ISBLANK(SBQQ__QuoteLine__r.Break_Date__c), NULL, ADDMONTHS(SBQQ__StartDate__c, SBQQ__QuoteLine__r.Break_Date__c))</formula>
        <label>Break Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Break_Penalty__c</fullName>
        <label>Break Penalty (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Amount__c</fullName>
        <label>Cap Amount (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Per_sq_ft__c</fullName>
        <label>Cap Per sq.ft.(£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <label>Company Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_per_Workstation__c</fullName>
        <formula>if(Number_of_Workstations__c &gt; 0, SBQQ__UnitCost__c /  Number_of_Workstations__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per Workstation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_sq_ft_pa__c</fullName>
        <label>Cost per sq ft (pa)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Bill_Date__c</fullName>
        <inlineHelpText>Date when FinancialForce will start invoicing for this product if it is billable</inlineHelpText>
        <label>First Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor_Name__c</fullName>
        <label>Guarantor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headline_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Headline Product</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Subscriptions (Headline Product)</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsConcession__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this line will create a negative line in FF Billing documents. For rent concessions only</inlineHelpText>
        <label>Is Concession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInsurance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this line will be treated as an insurance product by FinancialForce. Such products have their unit cost value automatically adjusted each year across all contracts</inlineHelpText>
        <label>Is Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this line will be treated as an insurance product by FinancialForce. Such products have their unit cost value automatically adjusted each year across all contracts</inlineHelpText>
        <label>Is Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Notice__c</fullName>
        <label>Maximum Notice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Notice__c</fullName>
        <label>Minimum Notice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Available_Break__c</fullName>
        <label>Next Available Break</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Billable_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked this product will not create an invoice line in the FF billing documents&apos;
            Company number - not needed</inlineHelpText>
        <label>Non Billable Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Workstations__c</fullName>
        <label>Number of Workstations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_GLA__c</fullName>
        <label>Override GLA</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registered_Address__c</fullName>
        <label>Registered Address</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rent_Review_Type__c</fullName>
        <label>Rent Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rent_Review_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_per_sq_ft__c</fullName>
        <label>Rent per sq ft per month</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent_per_sq_ft_per_annum__c</fullName>
        <formula>IF(ISBLANK(Rent_per_sq_ft__c), 0, Rent_per_sq_ft__c  * 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rent per sq ft per annum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that owns this subscription. This relationship is used for volume discount calculations.</description>
        <inlineHelpText>Account that owns this subscription. This relationship is used for volume discount calculations.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Additional Discount for this Subscription, if expressed as an amount</description>
        <inlineHelpText>Additional Discount for this Subscription, if expressed as an amount</inlineHelpText>
        <label>Additional Disc. (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</description>
        <inlineHelpText>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundledQuantity__c</fullName>
        <description>For items with calculated quantities this field hold the original (user entered) quantity.</description>
        <inlineHelpText>For items with calculated quantities this field holds the original quantity entered by the user.</inlineHelpText>
        <label>Original Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items are zero price and do not allow price or quantity to be edited.</description>
        <inlineHelpText>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.  This is a system field that is derived from the associated product.</description>
        <inlineHelpText>The type of the product charge.  This is a system field that is derived from the associated product.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentDiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes additional discount for this component to the parent package discount.</description>
        <inlineHelpText>Fixes additional discount for this component to the parent package discount.</inlineHelpText>
        <label>Component Discounted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentSubscriptionScope__c</fullName>
        <description>Subscription scope set at the component level. This field overrides the subscriptions cope copied from the product.</description>
        <inlineHelpText>Percent of Total scope set at the component level. This field overrides the Percent of Total scope copied from the Product Option.</inlineHelpText>
        <label>Component Percent of Total Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Components</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractNumber__c</fullName>
        <description>Number of associated contract.</description>
        <formula>SBQQ__Contract__r.ContractNumber</formula>
        <inlineHelpText>Number of associated contract.</inlineHelpText>
        <label>Contract #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract that governs this subscription.</description>
        <inlineHelpText>Contract that governs this subscription.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreditProductId__c</fullName>
        <description>ID of upgrade credit product for this subscription.</description>
        <formula>SBQQ__Product__r.SBQQ__UpgradeCredit__c</formula>
        <inlineHelpText>ID of upgrade credit product for this subscription.</inlineHelpText>
        <label>Credit Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerPrice__c</fullName>
        <description>Price the end user paid for this subscription.</description>
        <inlineHelpText>Price paid for this subscription.</inlineHelpText>
        <label>Customer Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__DimensionType__c</fullName>
        <formula>TEXT(SBQQ__Dimension__r.SBQQ__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dimension Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Dimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price Dimension associated with this Subscription</description>
        <inlineHelpText>Price Dimension associated with this Subscription</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountScheduleType__c</fullName>
        <description>Discount schedule type. Must be a stored value because it&apos;s used in formula fields that are rolled up.</description>
        <inlineHelpText>Discount schedule type. Copied from Type field in associated discount schedule.</inlineHelpText>
        <label>Discount Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</description>
        <inlineHelpText>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Additional Discount for this Subscription, if expressed as a percentage</description>
        <inlineHelpText>Additional Discount for this Subscription, if expressed as a percentage</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>Discount to be taken on top of the Partner Discount.</description>
        <inlineHelpText>Discount to be taken on top of the Partner Discount.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicOptionId__c</fullName>
        <description>Contains feature id and product id to identify the feature and optional SKU associated with this line.</description>
        <inlineHelpText>Identifies feature and dynamic option for this line.</inlineHelpText>
        <label>Dynamic Option ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__EndDate__c</fullName>
        <description>The last date this contract is valid.</description>
        <formula>if ( ISBLANK (SBQQ__SubscriptionEndDate__c), SBQQ__Contract__r.EndDate, SBQQ__SubscriptionEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The last date this contract is valid.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListPrice__c</fullName>
        <description>List price for this subscription product.</description>
        <inlineHelpText>List price for this subscription product.</inlineHelpText>
        <label>List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupAmount__c</fullName>
        <description>Markup for this Subscription, if expressed as an amount</description>
        <inlineHelpText>Markup for this Subscription, if expressed as an amount</inlineHelpText>
        <label>Markup (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Markup for this Subscription, if expressed as a percentage</description>
        <inlineHelpText>Markup for this Subscription, if expressed as a percentage</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__NetPrice__c</fullName>
        <description>Net price for this subscription.</description>
        <inlineHelpText>Net price for this subscription.</inlineHelpText>
        <label>Net Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Number__c</fullName>
        <description>Number indicating this line&apos;s position within its group or quote.</description>
        <inlineHelpText>Number indicating this line&apos;s position within its group or quote.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionDiscountAmount__c</fullName>
        <description>Discount extended on this product because it&apos;s part of a package.</description>
        <inlineHelpText>Discount extended on this product because it&apos;s part of a package.</inlineHelpText>
        <label>Option Discount (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionDiscount__c</fullName>
        <description>If this line is for an optional SKU, this field captures any discount given to the package and extended to the option.</description>
        <inlineHelpText>If this line is for an optional SKU, this field captures any discount given to the package and extended to the option.</inlineHelpText>
        <label>Option Discount (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionLevel__c</fullName>
        <description>Indicates nest level of this option (only applies to lines that are generated from options).</description>
        <inlineHelpText>Indicates nest level of this option (only applies to lines that are generated from options).</inlineHelpText>
        <label>Option Level</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionType__c</fullName>
        <description>Indicates the Option Type, which is copied from related Product Option. Determines how quantity is calculated.</description>
        <inlineHelpText>Indicates the Option Type, which is copied from related Product Option. Determines how quantity is calculated.</inlineHelpText>
        <label>Option Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Related Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The order product where this subscription is originated from.</description>
        <inlineHelpText>The order product where this subscription is generated from.</inlineHelpText>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Exists for convenience of not having to run relationship queries.</description>
        <inlineHelpText>Original Quote Line of the subscription.</inlineHelpText>
        <label>Original Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Quote Lines (Derived)</relationshipLabel>
        <relationshipName>OriginalQuoteLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalUnitCost__c</fullName>
        <description>Original unit cost of the subscription at the time of purchase before Cost Schedules were applied.</description>
        <inlineHelpText>Original unit cost of the subscription at the time of purchase before Cost Schedules were applied.</inlineHelpText>
        <label>Original Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__PartnerDiscount__c</fullName>
        <description>Partner discounts are applied after all automatic and discretionary discounts. The partner discount is taken into account in the Partner Price.</description>
        <inlineHelpText>Partner discounts are applied after all automatic and discretionary discounts. The partner discount is taken into account in the Partner Price.</inlineHelpText>
        <label>Partner Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <description>Determines how the price for this line item is set. &quot;List&quot; = calculated by subtracting discount from list price. &quot;Cost&quot;  = calculated by adding markup to cost.</description>
        <inlineHelpText>Indicates how the price for this line item is calculated. &quot;List&quot; = subtracting discount from list price. &quot;Cost&quot; = adding markup to cost.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProductId__c</fullName>
        <description>Convenience field to support integration with Service Cloud.</description>
        <formula>SBQQ__Product__c</formula>
        <inlineHelpText>Convenience field to support integration with Service Cloud.</inlineHelpText>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductName__c</fullName>
        <description>Pulls in the Product Name</description>
        <formula>SBQQ__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product option that generated this line (if any).</description>
        <inlineHelpText>Product option that generated this line (if any).</inlineHelpText>
        <label>Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product used to sell this subscription.</description>
        <inlineHelpText>Product used to sell this subscription.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProrateMultiplier__c</fullName>
        <description>Calculated ratio used to compute prorated price.</description>
        <inlineHelpText>Calculated ratio used to compute prorated price.</inlineHelpText>
        <label>Prorate Multiplier</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quantity__c</fullName>
        <description>Quantity of this subscription product purchased by the customer.</description>
        <inlineHelpText>Quantity of this subscription product purchased by the customer.</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this subscription.</description>
        <inlineHelpText>Quote line that generated this subscription.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RegularPrice__c</fullName>
        <description>Regular Price for this Subscription.</description>
        <inlineHelpText>Regular Price for this Subscription.</inlineHelpText>
        <label>Regular Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPrice__c</fullName>
        <description>Renewal price for this subscription. Overrides default renewal price computation based on account&apos;s Renewal Pricing field.</description>
        <inlineHelpText>Enter renewal price to override default calculation. Overrides default renewal price computation based on account&apos;s Renewal Pricing field.</inlineHelpText>
        <label>Renewal Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductId__c</fullName>
        <description>Exists for convenience of not having to run relationship queries.</description>
        <formula>IF(ISBLANK(SBQQ__Product__r.SBQQ__RenewalProduct__c),SBQQ__Product__c,IF(ISPICKVAL(SBQQ__Product__r.SBQQ__RenewalProduct__r.SBQQ__SubscriptionPricing__c, &apos;&apos;), SBQQ__Product__c, SBQQ__Product__r.SBQQ__RenewalProduct__c))</formula>
        <inlineHelpText>Product ID for the renewal subscription.</inlineHelpText>
        <label>Renewal Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductOptionId__c</fullName>
        <formula>SBQQ__ProductOption__r.SBQQ__RenewalProductOption__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductOptionProductId__c</fullName>
        <formula>SBQQ__ProductOption__r.SBQQ__RenewalProductOption__r.SBQQ__OptionalSKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductOptionSubscriptionPricing__c</fullName>
        <formula>TEXT(SBQQ__ProductOption__r.SBQQ__RenewalProductOption__r.SBQQ__OptionalSKU__r.SBQQ__SubscriptionPricing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option Sub Pricing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalQuantity__c</fullName>
        <description>Quantity of this subscription product that will be renewed.</description>
        <inlineHelpText>Quantity of this subscription product that will be renewed.</inlineHelpText>
        <label>Renewal Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedDate__c</fullName>
        <description>Date this subscription was renewed as determined by date the renewal opportunity was contracted.</description>
        <inlineHelpText>Date this subscription was renewed. Blank means it has not been renewed.</inlineHelpText>
        <label>Renewed Date</label>
        <type>Date</type>
    </fields>
</CustomObject>